@@ -46,7 +46,7 @@ Foam::outputEventFile::outputEventFile
 {
     if (fileName.size() != 0)
     {
-        //- properties of a MNT file
+        //- properties of a DEM file
         string separator_ = " ";
 
         //- file name
