@@ -1,3 +1,0 @@
-setFieldsFromMNT.C
-
-EXE = $(FOAM_USER_APPBIN)/setFieldsFromMNT
